[gd_scene load_steps=14 format=4 uid="uid://duvy8pdxnjdmo"]

[ext_resource type="PackedScene" uid="uid://cmxv3umec3ewx" path="res://scenes/player.tscn" id="1_6hm0t"]
[ext_resource type="Script" uid="uid://b2rbrimtr7he0" path="res://scripts/main_scene.gd" id="1_l6k43"]
[ext_resource type="Texture2D" uid="uid://b1blnn5c1g4b6" path="res://assets/16x16 Magical Forest Asset Pack/Tiles/Forest Tile.png" id="2_psmqu"]
[ext_resource type="Texture2D" uid="uid://b5jhy0dfacvmr" path="res://assets/underworld_layers.png" id="4_18nlu"]
[ext_resource type="Script" uid="uid://m827dmmvmhfr" path="res://scripts/emitter.gd" id="7_0snu2"]
[ext_resource type="PackedScene" uid="uid://cv6nyao2cqvrl" path="res://scenes/player_ui.tscn" id="7_rj7la"]
[ext_resource type="Script" uid="uid://qs4pia2qetrl" path="res://scripts/upgrades/player_variables.gd" id="15_t4j86"]
[ext_resource type="PackedScene" uid="uid://dlhra0wjxnlvj" path="res://scenes/center_objective.tscn" id="15_uf7ea"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_df4cm"]
texture = ExtResource("2_psmqu")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2.125, -8, 8, -8, 8, 8, -8, 8, -8, -0.25)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(2.25, -8, 6.25, 1.875, 6.625, 8, -8, 8, -8, -8)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.125, -1, 3, -0.875, 3.25, 2.875, -3.125, 2.875)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.125, -3.875, 5.375, -4.25, 5.25, 2.875, -5.125, 3)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.625, -5.875, 6.375, -5.75, 6, 4.375, -7, 4.25)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 6.375, 2.125, 6.375, 2.125, -0.375, -4.875, -5.125, -8, -8)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 2.75, -2.875, -2.125, 0, -3, 5.875, -8, 6, -8, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c1pb6"]
texture = ExtResource("4_18nlu")
0:0/0 = 0
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 2, -8, 2)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 2, -8, 2)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -3, -2, -6.5, 1.5, -6.5, 2, -3, 4.5, -2, 5, 4, 2.5, 6, -3, 6, -5.5, 4, -5, -1)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.5, -4.5, 6, -5, 6, 1.5, 2.5, 4, -5.5, 4, -5.5, -2.5)
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_7fs3h"]
physics_layer_0/collision_layer = 32
physics_layer_0/collision_mask = 7
sources/0 = SubResource("TileSetAtlasSource_df4cm")
sources/1 = SubResource("TileSetAtlasSource_c1pb6")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_l3c56"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_qtt6f"]
vertices = PackedVector2Array(508.969, 5.8125, 508.031, 315.008, -2.92969, 315.977, -1.0625, 1, 247.82, 1)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4)])
outlines = Array[PackedVector2Array]([PackedVector2Array(248, -9, -11, -9, -13, 326, 518, 325, 519, -4)])

[node name="MainScene" type="Node2D"]
position = Vector2(-509, -312)
script = ExtResource("1_l6k43")

[node name="Player" parent="." instance=ExtResource("1_6hm0t")]
position = Vector2(308, 64)
scale = Vector2(1.17705, 1.17705)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(3, 3)
process_callback = 0
position_smoothing_enabled = true

[node name="GroundLayer" type="TileMapLayer" parent="." groups=["boundary"]]
use_parent_material = true
position = Vector2(253, 152)
tile_map_data = PackedByteArray("AAD//wAAAQADAAIAAAD/////AQADAAIAAAAAAP//AQADAAIAAAAAAAAAAQADAAIAAAABAAAAAQADAAAAAAABAP//AQADAAAAAAACAP//AQADAAAAAAACAAAAAQADAAAAAAADAAAAAQADAAAAAAADAP//AQADAAAAAAD+/wAAAQADAAAAAAD9/wAAAQADAAAAAAD8/wAAAQADAAAAAAD8////AQADAAAAAAD9////AQADAAAAAAD+////AQADAAAAAAAAAP7/AQADAAEAAAAAAP3/AQADAAEAAAD///7/AQADAAEAAAD///3/AQADAAEAAAD///z/AQADAAEAAAAAAPz/AQADAAEAAAAAAAEAAQADAAEAAAAAAAIAAQADAAEAAAAAAAMAAQADAAEAAAD//wEAAQADAAEAAAD//wIAAQADAAEAAAD//wMAAQADAAEAAAABAAEAAQADAAIAAAD+/wEAAQADAAIAAAD+//7/AQADAAIAAAABAP7/AQADAAIAAAD8//z/AQAJAAAAAAD8//3/AQAJAAEAAAD8//7/AQAJAAIAAAD9//z/AQAJAAAAAAD9//3/AQAKAAIAAAADAPz/AQAJAAAAAAADAP3/AQAJAAEAAAADAP7/AQAJAAIAAAACAPz/AQAJAAAAAAACAP3/AQAKAAIAAAD8/wIAAQAJAAAAAAD8/wMAAQAJAAEAAAD8/wQAAQAJAAIAAAD9/wMAAQAJAAAAAAD9/wQAAQAJAAIAAAADAAIAAQAJAAEAAAADAAMAAQAJAAEAAAACAAMAAQAJAAEAAAACAAQAAQAJAAIAAAADAAQAAQAKAAIAAAD8/wEAAQACAAAAAAD9/wEAAQACAAAAAAD9/wIAAQACAAAAAAD+/wIAAQACAAAAAAD+/wMAAQACAAAAAAABAAMAAQACAAAAAAABAAIAAQACAAAAAAACAAIAAQACAAAAAAACAAEAAQACAAAAAAADAAEAAQACAAAAAAACAP7/AQACAAAAAAABAP3/AQACAAAAAAABAPz/AQACAAAAAAD9//7/AQACAAAAAAD+//3/AQACAAAAAAD+//z/AQACAAAAAAD+/wQAAQACAAAAAAD//wQAAQADAAEAAAAAAAQAAQADAAEAAAABAAQAAQACAAAAAAD///v/AQADAAEAAAAAAPv/AQADAAEAAAAEAP//AQADAAAAAAAEAAAAAQADAAAAAAD7////AQADAAAAAAD7/wAAAQADAAAAAAD7/wEAAQACAAAAAAD7/wIAAQACAAAAAAD7/wMAAQACAAAAAAD7/wQAAQACAAAAAAD7//z/AQACAAAAAAD7//3/AQACAAAAAAD7//7/AQACAAAAAAD7//v/AQACAAAAAAD8//v/AQACAAAAAAD9//v/AQACAAAAAAD+//v/AQACAAAAAAABAPv/AQACAAAAAAACAPv/AQACAAAAAAADAPv/AQACAAAAAAAEAPv/AQACAAAAAAAEAPz/AQACAAAAAAAEAP3/AQACAAAAAAAEAP7/AQACAAAAAAAEAAEAAQACAAAAAAAEAAIAAQACAAAAAAAEAAMAAQACAAAAAAAEAAQAAQACAAAAAAD6/wAAAQAAAAEAAAD5/wAAAQAAAAEAAAD4/wAAAQAAAAEAAAD3/wAAAQAAAAEAAAD2/wAAAQAAAAEAAAD1/wAAAQAAAAEAAAD0/wAAAQAAAAEAAADz/wAAAQAAAAEAAADy/wAAAQAAAAEAAADx/wAAAQAAAAEAAADx////AQAAAAEAAADy////AQAAAAEAAADz////AQAAAAEAAAD0////AQAAAAEAAAD1////AQAAAAEAAAD2////AQAAAAEAAAD3////AQAAAAEAAAD4////AQAAAAEAAAD5////AQAAAAEAAAD6////AQAAAAEAAAAFAP//AQAAAAEAAAAGAP//AQAAAAEAAAAHAP//AQAAAAEAAAAIAP//AQAAAAEAAAAJAP//AQAAAAEAAAAKAP//AQAAAAEAAAALAP//AQAAAAEAAAAMAP//AQAAAAEAAAANAP//AQAAAAEAAAAOAP//AQAAAAEAAAAFAAAAAQAAAAEAAAAGAAAAAQAAAAEAAAAHAAAAAQAAAAEAAAAIAAAAAQAAAAEAAAAJAAAAAQAAAAEAAAAKAAAAAQAAAAEAAAALAAAAAQAAAAEAAAAMAAAAAQAAAAEAAAANAAAAAQAAAAEAAAAOAAAAAQAAAAEAAAAAAPr/AQABAAEAAAAAAPn/AQABAAEAAAAAAPj/AQABAAEAAAD///r/AQABAAEAAAD///n/AQABAAEAAAD///j/AQABAAEAAAD///f/AQACAAIAAAD//wUAAQABAAEAAAD//wYAAQABAAEAAAD//wcAAQABAAEAAAD//wgAAQABAAEAAAAAAAUAAQABAAEAAAAAAAYAAQABAAEAAAAAAAcAAQABAAEAAAAAAAgAAQABAAEAAADw/wkAAQACAAIAAADx/wkAAQACAAIAAADy/wkAAQACAAIAAADz/wkAAQACAAIAAAD0/wkAAQACAAIAAAD1/wkAAQACAAIAAAD2/wkAAQACAAIAAAD3/wkAAQACAAIAAAD4/wkAAQACAAIAAAD5/wkAAQACAAIAAAD6/wkAAQACAAIAAAD7/wkAAQACAAIAAAD8/wkAAQACAAIAAAD9/wkAAQACAAIAAAD+/wkAAQACAAIAAAD//wkAAQACAAIAAAAAAAkAAQACAAIAAAABAAkAAQACAAIAAAACAAkAAQACAAIAAAADAAkAAQACAAIAAAAEAAkAAQACAAIAAAAFAAkAAQACAAIAAAAGAAkAAQACAAIAAAAHAAkAAQACAAIAAAAIAAkAAQACAAIAAAAJAAkAAQACAAIAAAAKAAkAAQACAAIAAAALAAkAAQACAAIAAAAMAAkAAQACAAIAAAANAAkAAQACAAIAAAAOAAkAAQACAAIAAAAPAAkAAQACAAIAAAAPAAgAAQACAAIAAAAPAAcAAQACAAIAAAAPAAYAAQACAAIAAAAPAAUAAQACAAIAAAAPAAQAAQACAAIAAAAPAAMAAQACAAIAAAAPAAIAAQACAAIAAAAPAAEAAQACAAIAAAAPAAAAAQACAAIAAAAPAP//AQACAAIAAAAPAP7/AQACAAIAAAAPAP3/AQACAAIAAAAPAPz/AQACAAIAAAAPAPv/AQACAAIAAAAPAPr/AQACAAIAAAAPAPn/AQACAAIAAAAPAPj/AQACAAIAAAAPAPf/AQACAAIAAAAOAPf/AQACAAIAAAANAPf/AQACAAIAAAAMAPf/AQACAAIAAAALAPf/AQACAAIAAAAKAPf/AQACAAIAAAAJAPf/AQACAAIAAAAIAPf/AQACAAIAAAAHAPf/AQACAAIAAAAGAPf/AQACAAIAAAAFAPf/AQACAAIAAAAEAPf/AQACAAIAAAADAPf/AQACAAIAAAACAPf/AQACAAIAAAABAPf/AQACAAIAAAAAAPf/AQACAAIAAAD+//f/AQACAAIAAAD9//f/AQACAAIAAAD8//f/AQACAAIAAAD7//f/AQACAAIAAAD6//f/AQACAAIAAAD5//f/AQACAAIAAAD4//f/AQACAAIAAAD3//f/AQACAAIAAAD2//f/AQACAAIAAAD1//f/AQACAAIAAAD0//f/AQACAAIAAADz//f/AQACAAIAAADy//f/AQACAAIAAADx//f/AQACAAIAAADw//f/AQACAAIAAADw//j/AQACAAIAAADw//n/AQACAAIAAADw//r/AQACAAIAAADw//v/AQACAAIAAADw//z/AQACAAIAAADw//3/AQACAAIAAADw//7/AQACAAIAAADw////AQACAAIAAADw/wAAAQACAAIAAADw/wEAAQACAAIAAADw/wIAAQACAAIAAADw/wMAAQACAAIAAADw/wQAAQACAAIAAADw/wUAAQACAAIAAADw/wYAAQACAAIAAADw/wcAAQACAAIAAADw/wgAAQACAAIAAADx/wUAAQAAAAAAAADx/wYAAQAAAAAAAADx/wcAAQAAAAAAAADx/wgAAQAAAAAAAADy/wUAAQAAAAAAAADy/wYAAQAAAAAAAADy/wcAAQAAAAAAAADy/wgAAQAAAAAAAADz/wUAAQAAAAAAAADz/wYAAQAAAAAAAADz/wcAAQAAAAAAAADz/wgAAQAAAAAAAAD0/wUAAQAAAAAAAAD0/wYAAQAAAAAAAAD0/wcAAQAAAAAAAAD0/wgAAQAAAAAAAAD1/wUAAQAAAAAAAAD1/wYAAQAAAAAAAAD1/wcAAQAAAAAAAAD1/wgAAQAAAAAAAAD2/wUAAQAAAAAAAAD2/wYAAQAAAAAAAAD2/wcAAQAAAAAAAAD2/wgAAQAAAAAAAAD3/wUAAQAAAAAAAAD3/wYAAQAAAAAAAAD3/wcAAQAAAAAAAAD3/wgAAQAAAAAAAAD4/wUAAQAAAAAAAAD4/wYAAQAAAAAAAAD4/wcAAQAAAAAAAAD4/wgAAQAAAAAAAAD5/wUAAQAAAAAAAAD5/wYAAQAAAAAAAAD5/wcAAQAAAAAAAAD5/wgAAQAAAAAAAAD6/wUAAQAAAAAAAAD6/wYAAQAAAAAAAAD6/wcAAQAAAAAAAAD6/wgAAQAAAAAAAAD7/wUAAQAAAAAAAAD7/wYAAQAAAAAAAAD7/wcAAQAAAAAAAAD7/wgAAQAAAAAAAAD8/wUAAQAAAAAAAAD8/wYAAQAAAAAAAAD8/wcAAQAAAAAAAAD8/wgAAQAAAAAAAAD9/wUAAQAAAAAAAAD9/wYAAQAAAAAAAAD9/wcAAQAAAAAAAAD9/wgAAQAAAAAAAAD+/wUAAQAAAAAAAAD+/wYAAQAAAAAAAAD+/wcAAQAAAAAAAAD+/wgAAQAAAAAAAADx/wEAAQAAAAAAAADx/wIAAQAAAAAAAADx/wMAAQAAAAAAAADx/wQAAQAAAAAAAADy/wEAAQAAAAAAAADy/wIAAQAAAAAAAADy/wMAAQAAAAAAAADy/wQAAQAAAAAAAADz/wEAAQAAAAAAAADz/wIAAQAAAAAAAADz/wMAAQAAAAAAAADz/wQAAQAAAAAAAAD0/wEAAQAAAAAAAAD0/wIAAQAAAAAAAAD0/wMAAQAAAAAAAAD0/wQAAQAAAAAAAAD1/wEAAQAAAAAAAAD1/wIAAQAAAAAAAAD1/wMAAQAAAAAAAAD1/wQAAQAAAAAAAAD2/wEAAQAAAAAAAAD2/wIAAQAAAAAAAAD2/wMAAQAAAAAAAAD2/wQAAQAAAAAAAAD3/wEAAQAAAAAAAAD3/wIAAQAAAAAAAAD3/wMAAQAAAAAAAAD3/wQAAQAAAAAAAAD4/wEAAQAAAAAAAAD4/wIAAQAAAAAAAAD4/wMAAQAAAAAAAAD4/wQAAQAAAAAAAAD5/wEAAQAAAAAAAAD5/wIAAQAAAAAAAAD5/wMAAQAAAAAAAAD5/wQAAQAAAAAAAAD6/wEAAQAAAAAAAAD6/wIAAQAAAAAAAAD6/wMAAQAAAAAAAAD6/wQAAQAAAAAAAADx//j/AQAAAAAAAADx//n/AQAAAAAAAADx//r/AQAAAAAAAADx//v/AQAAAAAAAADx//z/AQAAAAAAAADx//3/AQAAAAAAAADx//7/AQAAAAAAAADy//j/AQAAAAAAAADy//n/AQAAAAAAAADy//r/AQAAAAAAAADy//v/AQAAAAAAAADy//z/AQAAAAAAAADy//3/AQAAAAAAAADy//7/AQAAAAAAAADz//j/AQAAAAAAAADz//n/AQAAAAAAAADz//r/AQAAAAAAAADz//v/AQAAAAAAAADz//z/AQAAAAAAAADz//3/AQAAAAAAAADz//7/AQAAAAAAAAD0//j/AQAAAAAAAAD0//n/AQAAAAAAAAD0//r/AQAAAAAAAAD0//v/AQAAAAAAAAD0//z/AQAAAAAAAAD0//3/AQAAAAAAAAD0//7/AQAAAAAAAAD1//j/AQAAAAAAAAD1//n/AQAAAAAAAAD1//r/AQAAAAAAAAD1//v/AQAAAAAAAAD1//z/AQAAAAAAAAD1//3/AQAAAAAAAAD1//7/AQAAAAAAAAD2//j/AQAAAAAAAAD2//n/AQAAAAAAAAD2//r/AQAAAAAAAAD2//v/AQAAAAAAAAD2//z/AQAAAAAAAAD2//3/AQAAAAAAAAD2//7/AQAAAAAAAAD3//j/AQAAAAAAAAD3//n/AQAAAAAAAAD3//r/AQAAAAAAAAD3//v/AQAAAAAAAAD3//z/AQAAAAAAAAD3//3/AQAAAAAAAAD3//7/AQAAAAAAAAD4//j/AQAAAAAAAAD4//n/AQAAAAAAAAD4//r/AQAAAAAAAAD4//v/AQAAAAAAAAD4//z/AQAAAAAAAAD4//3/AQAAAAAAAAD4//7/AQAAAAAAAAD5//j/AQAAAAAAAAD5//n/AQAAAAAAAAD5//r/AQAAAAAAAAD5//v/AQAAAAAAAAD5//z/AQAAAAAAAAD5//3/AQAAAAAAAAD5//7/AQAAAAAAAAD6//j/AQAAAAAAAAD6//n/AQAAAAAAAAD6//r/AQAAAAAAAAD6//v/AQAAAAAAAAD6//z/AQAAAAAAAAD6//3/AQAAAAAAAAD6//7/AQAAAAAAAAD7//j/AQAAAAAAAAD7//n/AQAAAAAAAAD7//r/AQAAAAAAAAD8//j/AQAAAAAAAAD8//n/AQAAAAAAAAD8//r/AQAAAAAAAAD9//j/AQAAAAAAAAD9//n/AQAAAAAAAAD9//r/AQAAAAAAAAD+//j/AQAAAAAAAAD+//n/AQAAAAAAAAD+//r/AQAAAAAAAAABAPj/AQAAAAAAAAABAPn/AQAAAAAAAAABAPr/AQAAAAAAAAACAPj/AQAAAAAAAAACAPn/AQAAAAAAAAACAPr/AQAAAAAAAAADAPj/AQAAAAAAAAADAPn/AQAAAAAAAAADAPr/AQAAAAAAAAAEAPj/AQAAAAAAAAAEAPn/AQAAAAAAAAAEAPr/AQAAAAAAAAAFAPj/AQAAAAAAAAAFAPn/AQAAAAAAAAAFAPr/AQAAAAAAAAAGAPj/AQAAAAAAAAAGAPn/AQAAAAAAAAAGAPr/AQAAAAAAAAAHAPj/AQAAAAAAAAAHAPn/AQAAAAAAAAAHAPr/AQAAAAAAAAAIAPj/AQAAAAAAAAAIAPn/AQAAAAAAAAAIAPr/AQAAAAAAAAAJAPj/AQAAAAAAAAAJAPn/AQAAAAAAAAAJAPr/AQAAAAAAAAAKAPj/AQAAAAAAAAAKAPn/AQAAAAAAAAAKAPr/AQAAAAAAAAALAPj/AQAAAAAAAAALAPn/AQAAAAAAAAALAPr/AQAAAAAAAAAMAPj/AQAAAAAAAAAMAPn/AQAAAAAAAAAMAPr/AQAAAAAAAAANAPj/AQAAAAAAAAANAPn/AQAAAAAAAAANAPr/AQAAAAAAAAAOAPj/AQAAAAAAAAAOAPn/AQAAAAAAAAAOAPr/AQAAAAAAAAAFAPv/AQAAAAAAAAAFAPz/AQAAAAAAAAAFAP3/AQAAAAAAAAAFAP7/AQAAAAAAAAAGAPv/AQAAAAAAAAAGAPz/AQAAAAAAAAAGAP3/AQAAAAAAAAAGAP7/AQAAAAAAAAAHAPv/AQAAAAAAAAAHAPz/AQAAAAAAAAAHAP3/AQAAAAAAAAAHAP7/AQAAAAAAAAAIAPv/AQAAAAAAAAAIAPz/AQAAAAAAAAAIAP3/AQAAAAAAAAAIAP7/AQAAAAAAAAAJAPv/AQAAAAAAAAAJAPz/AQAAAAAAAAAJAP3/AQAAAAAAAAAJAP7/AQAAAAAAAAAKAPv/AQAAAAAAAAAKAPz/AQAAAAAAAAAKAP3/AQAAAAAAAAAKAP7/AQAAAAAAAAALAPv/AQAAAAAAAAALAPz/AQAAAAAAAAALAP3/AQAAAAAAAAALAP7/AQAAAAAAAAAMAPv/AQAAAAAAAAAMAPz/AQAAAAAAAAAMAP3/AQAAAAAAAAAMAP7/AQAAAAAAAAANAPv/AQAAAAAAAAANAPz/AQAAAAAAAAANAP3/AQAAAAAAAAANAP7/AQAAAAAAAAAOAPv/AQAAAAAAAAAOAPz/AQAAAAAAAAAOAP3/AQAAAAAAAAAOAP7/AQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAAMAAEAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAQAAQAAAAAAAAANAAEAAQAAAAAAAAANAAIAAQAAAAAAAAANAAMAAQAAAAAAAAANAAQAAQAAAAAAAAAOAAEAAQAAAAAAAAAOAAIAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAACAAgAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAgAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAYAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAgAAQAAAAAAAAANAAUAAQAAAAAAAAANAAYAAQAAAAAAAAANAAcAAQAAAAAAAAANAAgAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAgAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_7fs3h")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Emitter" type="Node" parent="."]
script = ExtResource("7_0snu2")

[node name="ArenaBoundary" type="StaticBody2D" parent="." groups=["boundary"]]
collision_layer = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArenaBoundary"]
position = Vector2(255, 10)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_l3c56")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ArenaBoundary"]
position = Vector2(-1, 155)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_l3c56")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ArenaBoundary"]
position = Vector2(255, 310)
shape = SubResource("WorldBoundaryShape2D_l3c56")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ArenaBoundary"]
position = Vector2(507, 155)
rotation = 4.71239
shape = SubResource("WorldBoundaryShape2D_l3c56")

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="CenterObjective" parent="." instance=ExtResource("15_uf7ea")]
position = Vector2(253, 152)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_qtt6f")

[node name="PlayerVariables" type="Node" parent="."]
script = ExtResource("15_t4j86")

[node name="PlayerUI" parent="." instance=ExtResource("7_rj7la")]

[connection signal="round_end" from="Emitter" to="." method="_on_emitter_round_end"]
[connection signal="timeout" from="RoundTimer" to="." method="_on_round_timer_timeout"]
